remove index column from library CSVs; rename status column

--- a/non-pipeline_analyses/library_design/notebooks/write_sequences_and_barcodes_to_files.ipynb
+++ b/non-pipeline_analyses/library_design/notebooks/write_sequences_and_barcodes_to_files.ipynb
@@ -352,7 +352,7 @@
    "source": [
     "barcode_to_strain_df = inserts_df[['barcode', 'strain']]\n",
     "output_path = os.path.join(output_dir, \"flu-seqneut-2025-barcode-to-strain.csv\")\n",
-    "barcode_to_strain_df.to_csv(output_path)"
+    "barcode_to_strain_df.to_csv(output_path, index=False)"
    ]
   },
   {
@@ -375,13 +375,13 @@
     "log_df = (log_df\n",
     "          .rename(columns = {'trimmed_ha_ecto_sequence': 'nt_sequence',\n",
     "                             'trimmed_ha_ecto_sequence_protein': 'protein_sequence'})\n",
-    "          .assign(status = 'unlogged')\n",
+    "          .assign(Bloom_lab_plasmid_log_number = 'unlogged')\n",
     "          .drop_duplicates()\n",
     "          .reset_index(drop=True)\n",
     "         )\n",
     "\n",
     "output_path = os.path.join(output_dir, \"flu-seqneut-2025-library.csv\")\n",
-    "log_df.to_csv(output_path)"
+    "log_df.to_csv(output_path, index=False)"
    ]
   },
   {
